[gd_scene load_steps=7 format=3 uid="uid://bombr13ma3q8o"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_uc6yk"]
[ext_resource type="Texture2D" uid="uid://dtgphwhgvi6iy" path="res://art/IMG_2640.PNG" id="2_g73d6"]
[ext_resource type="Texture2D" uid="uid://pnpi4rjo80q4" path="res://art/placeholder arrow.PNG" id="3_j2lnq"]
[ext_resource type="PackedScene" uid="uid://dju1hvapdgqbs" path="res://Scenes/pause_screen.tscn" id="4_kx0le"]
[ext_resource type="Texture2D" uid="uid://cyamkeioip6ar" path="res://icon.svg" id="5_jynig"]
[ext_resource type="Script" path="res://Scripts/pause_icon.gd" id="5_oidah"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uc6yk")

[node name="Img2640" type="Sprite2D" parent="."]
position = Vector2(602, 323)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_g73d6")

[node name="Up Button" type="Button" parent="."]
layout_mode = 0
offset_left = 523.0
offset_top = 5.0
offset_right = 3531.0
offset_bottom = 2129.0
scale = Vector2(0.0560984, 0.0535125)
icon = ExtResource("3_j2lnq")
flat = true

[node name="Right Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1030.0
offset_top = 238.0
offset_right = 4038.0
offset_bottom = 2362.0
rotation = 1.59175
scale = Vector2(0.0560984, 0.0535125)
icon = ExtResource("3_j2lnq")
flat = true

[node name="Left Button" type="Button" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 408.0
offset_right = 3179.0
offset_bottom = 2532.0
rotation = -1.55861
scale = Vector2(0.0560984, 0.0535125)
icon = ExtResource("3_j2lnq")
flat = true

[node name="text object" type="Button" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 488.0
offset_right = 3668.0
offset_bottom = 2612.0
scale = Vector2(-0.0309632, 0.0273233)
icon = ExtResource("3_j2lnq")

[node name="PauseScreen" parent="." instance=ExtResource("4_kx0le")]
unique_name_in_owner = true

[node name="PauseIcon" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -43.0
offset_right = 40.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_jynig")
texture_pressed = ExtResource("3_j2lnq")
stretch_mode = 0
script = ExtResource("5_oidah")

[connection signal="pressed" from="Up Button" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="Right Button" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Left Button" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="text object" to="." method="_on_text_object_pressed"]
[connection signal="pressed" from="PauseIcon" to="." method="_on_pause_icon_pressed"]
